[tool.poetry]
name = "jupyter_sample"
version = "0.1.0"
description = ""
authors = ["Nathan Barraillé <nathan.barraille@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
chart-studio = "^1.0.0"
pandas = "^0.25.3"
numpy = "^1.18.1"
jupyter = "^1.0.0"
jupyterlab = "^1.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
